# PyTorch-Enterprise-Lab-CXA-2026

./: .env.example  .gitignore  Dockerfile  PyTorch_Mastery_Plan.xlsx  README.md  README_Development_Plan.md  README_Development_Plan_My_HandsOn.md  docker-compose.yml  mlflow.db  package.json  pyproject.toml
.github/: copilot-instructions.md
DevOps/Scripts/: app-api.sh  app-portal.sh  docker-all-down.sh  docker-all-status.sh  docker-all-up.sh  run-tests.sh  setup-python-env.sh
backups/handson_scaffold/: __init__.py
configs/foundations/: attention_viz.yaml  cfpb_complaints.yaml  cic_iot.yaml  domain_adapt.yaml  export.yaml  forex_attention.yaml  forex_eurusd.yaml  forex_neuralnet.yaml  lora.yaml  monitoring.yaml  profiler.yaml  quantization.yaml  tracking.yaml
data/cfpb/: complaints.parquet
data/cic_iot/: iot_traffic.parquet
data/cmapss/: train_FD001.txt
data/oasst1/: oasst1_en.parquet
data/stackoverflow/: so_java_es.parquet
handson_logs/: HandsOn_Log_Week00.md  HandsOn_Log_Week01.md  HandsOn_Log_Week02.md  HandsOn_Log_Week03.md  HandsOn_Log_Week04.md  HandsOn_Log_Week05.md  HandsOn_Log_Week06.md  HandsOn_Log_Week07.md  HandsOn_Log_Week08.md  HandsOn_Log_Week09.md  HandsOn_Log_Week10.md  HandsOn_Log_Week11.md  HandsOn_Log_Week12.md
portals/quantedge-portal-admin/: package.json
portals/quantedge-portal-customer/: package.json
src/quantedge_services/: __init__.py
src/quantedge_services_handson/: __main__.py  run.py
tests/: conftest.py
tests/foundations/: test_adr_tasks.py  test_attention_models.py  test_attention_tasks.py  test_attention_viz.py  test_autograd_task.py  test_canary_tasks.py  test_cic_iot_download_task.py  test_dataset_task.py  test_domain_adapt_models.py  test_drift_tasks.py  test_export_service.py  test_export_tasks.py  test_ingest_task.py  test_job_registry.py  test_lora_models.py  test_lora_tasks.py  test_monitoring_tasks.py  test_nn_models.py  test_nn_tasks.py  (+7 more)
(+197 files in other folders)
