[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantedge-services"
version = "0.1.0"
description = "QuantEdge AI Platform — PyTorch enterprise workflows for financial intelligence"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "datasets>=2.19.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "mlflow>=2.13.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
]
gpu = [
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "onnx>=1.16.0",
    "onnxruntime-gpu>=1.18.0",
]
mlops = [
    "evidently>=0.4.0",
    "huggingface-hub>=0.23.0",
    "boto3>=1.34.0",
    "azure-ai-ml>=1.16.0",
]

[project.scripts]
quantedge-api = "quantedge_services.api.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quantedge_services"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gpu: requires CUDA device (deselect with -m 'not gpu')",
    "slow: long-running tests",
    "integration: requires external services",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/quantedge_services"]
omit = ["*/tests/*"]
